tests/machine/x/st/min_max_builtin.st
| nums |
nums := {3. 1. 4}.
Transcript show: ((nums min)) printString; cr.
Transcript show: ((nums max)) printString; cr.
